--- a/configurator/src/templates/settings-btcpay.config.template
+++ b/configurator/src/templates/settings-btcpay.config.template
@@ -13,7 +13,7 @@ bind=0.0.0.0
 sqlitefile=sqlite.db
 
 ### NBXplorer settings ###
-#BTC.explorer.url=http://{btc_proxy_address}:24444/
+#BTC.explorer.url=http://127.0.0.1:24444/
 BTC.explorer.cookiefile=/datadir/nbxplorer/Main/.cookie
 #BTC.lightning=/root/.lightning/lightning-rpc
 #BTC.lightning=https://apitoken:API_TOKEN_SECRET@charge.example.com/
