fix proxy volume path

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -204,7 +204,7 @@ volumes:
     type: pointer
     package-id: btc-rpc-proxy
     volume-id: main
-    path: "/root"
+    path: /
     readonly: false
   lnd:
     type: pointer
