fix backups freal

--- a/configurator/src/templates/.backupignore.template
+++ b/configurator/src/templates/.backupignore.template
@@ -1,2 +1,2 @@
-/embassy-data/package-data/volumes/btcpayserver/data/main/start9/public
-/embassy-data/package-data/volumes/btcpayserver/data/main/start9/shared
+/datadir/start9/public
+/datadir/start9/shared
