adjust tor address interface and add pattern for external node address

--- a/assets/compat/config_spec.yaml
+++ b/assets/compat/config_spec.yaml
@@ -111,6 +111,8 @@ bitcoin:
             name: Public Address
             description: The public address of your Bitcoin Core server
             nullable: false
+            pattern: '/((([A-Za-z]{3,9}:(?:\/\/)?)(?:[-;:&=\+\$,\w]+@)?[A-Za-z0-9.-]+|(?:www.|[-;:&=\+\$,\w]+@)[A-Za-z0-9.-]+)((?:\/[\+~%\/.\w-_]*)?\??(?:[-\+=&;%@.\w_]*)#?(?:[\w]*))?)/'
+            patternDescription: Must be a valid URL without a port specified
           p2p-port:
             type: number
             name: P2P Port
