--- a/manifest.yaml
+++ b/manifest.yaml
@@ -83,6 +83,7 @@ config:
       - btcpayserver
       - /datadir
       - "/mnt/assets/config_rules.yaml"
+      - "/mnt/assets/dependencies.yaml"
     mounts:
       compat: /mnt/assets
       main: /datadir
