--- a/manifest.yaml
+++ b/manifest.yaml
@@ -63,7 +63,7 @@ config:
     image: compat
     system: true
     entrypoint: compat
-    args: 
+    args:
       - config
       - get
       - /datadir
@@ -109,7 +109,7 @@ dependencies:
           - "btc-rpc-proxy"
           - /datadir
           - "/mnt/assets/btc-rpc-proxy_config_rules.yaml"
-        mounts: 
+        mounts:
           main: /datadir
           compat: /mnt/assets
         io-format: yaml
@@ -118,7 +118,7 @@ dependencies:
         image: compat
         system: true
         entrypoint: compat
-        args: 
+        args:
           - dependency
           - "auto-configure"
           - btcpayserver
@@ -137,7 +137,7 @@ dependencies:
     critical: true
     description: Used for the P2P connection interface.
     config:
-      check: 
+      check:
         type: docker
         image: compat
         system: true
@@ -149,7 +149,7 @@ dependencies:
           - bitcoind
           - /datadir
           - "/mnt/assets/bitcoind_config_rules.yaml"
-        mounts: 
+        mounts:
           main: /datadir
           compat: /mnt/assets
         io-format: yaml
@@ -158,7 +158,7 @@ dependencies:
         image: compat
         system: true
         entrypoint: compat
-        args: 
+        args:
           - dependency
           - "auto-configure"
           - btcpayserver
@@ -224,9 +224,9 @@ interfaces:
       port-mapping:
         80: "23000"
     lan-config:
-      23000:
+      443:
         ssl: true
-        mapping: 443
+        internal: 23000
     ui: true
     protocols:
       - tcp
