--- a/configurator/Cargo.toml
+++ b/configurator/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "configurator"
 version = "0.1.0"
-authors = ["Keagan McClelland <keagan.mcclelland@gmail.com>"]
+authors = ["Lucy Cifferello <lucy@start9labs.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
