--- a/assets/compat/bitcoind_config_rules.yaml
+++ b/assets/compat/bitcoind_config_rules.yaml
@@ -4,3 +4,9 @@
     - SET:
         var: advanced.peers.listen
         to-value: true
+- rule: '!(''[btcpayserver].bitcoin.bitcoind-rpc.type = "internal") OR ''[bitcoind].advanced.pruning.mode = "disabled"'
+  description: Pruning must be disabled if internal Bitcoin Core node is being used without Bitcoin Proxy (ie. must be a full archival node)
+  suggestions:
+    - SET:
+        var: 'advanced.pruning.mode'
+        to-value: disabled
