--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,7 +1,10 @@
 id: btcpayserver
 title: BTCPay Server
-version: 1.1.2.4
-release-notes: "Upgrade to EmbassyOS v0.3.0"
+version: 1.4.7
+release-notes: |
+  - Updates to most current released version: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.4.7
+  - Enables configuration for either a pruned or full archival internal Bitcoin Core node
+  - Sets advanced configuration for enabling block explorer rescan at a specific start height
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
@@ -128,7 +131,7 @@ dependencies:
           compat: /mnt/assets
         io-format: yaml
   bitcoind:
-    version: "^0.21.1.2"
+    version: ">=0.21.1.2 <0.23.0"
     requirement:
       type: "opt-in"
       how: Internal node is recommended, but you can alternatively configure an external bitcoin node.
@@ -167,7 +170,7 @@ dependencies:
           main: /datadir
         io-format: yaml
   lnd:
-    version: ">=0.13.3.1 <0.14.0"
+    version: ">=0.13.3.1 <0.15.0"
     requirement:
       type: "opt-in"
       how: Optionally use LND for internal lightning network node implementation.
@@ -282,6 +285,5 @@ actions:
       image: main
       entrypoint: docker_entrypoint.sh
       args: ["reset-admin-password"]
-      mounts:
-        main: /datadir
+      inject: true
       io-format: json
