update and rename enable registrations unti with new db schema

--- a/assets/compat/config_spec.yaml
+++ b/assets/compat/config_spec.yaml
@@ -187,7 +187,7 @@ advanced:
       type: number
       nullable: false
       name: "Sync Start Height"
-      description: "The block explorer within BTCPay will start scanning from the configured start height (by default, the current blockchain height). This means that you might not see old payments from your HD key. If you need to see old payments, you need to configure the start height to a specific height of your choice."
+      description: "The block explorer within BTCPay will start scanning from the configured start height. This means that you might not see old payments from your HD key. If you need to see old payments, you need to configure the start height to a specific height of your choice. By default, this value is '-1', which is used to indicate the current stored blockchain height."
       range: "[-1,*)"
       integral: true
       default: -1
