--- a/assets/compat/bitcoind_config_rules.yaml
+++ b/assets/compat/bitcoind_config_rules.yaml
@@ -4,9 +4,10 @@
     - SET:
         var: advanced.peers.listen
         to-value: true
-- rule: '!(''[btcpayserver].bitcoin.bitcoind-rpc.type = "internal") OR ''[bitcoind].advanced.pruning.mode = "disabled"'
+# must be configured to use proxy with fetchblocks enabled or bitcoind has to have pruning disabled
+- rule: '(!(''[btcpayserver].bitcoin.bitcoind-rpc.type = "internal") AND [btcpayserver].bitcoin.bitcoind-rpc.fetch-blocks?) OR (''[bitcoind].advanced.pruning.mode = "disabled")'
   description: Pruning must be disabled if internal Bitcoin Core node is being used without Bitcoin Proxy (ie. must be a full archival node)
   suggestions:
     - SET:
-        var: 'advanced.pruning.mode'
+        var: "advanced.pruning.mode"
         to-value: disabled
